--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <title>React Kit</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need to enable JavaScript to view this website.</noscript>
     <div id="root"></div>
   </body>
 </html>
